brixbench/benchmark/testdata/deployments/aibrix/gateway/overrides/routing/unset-routing-algorithm.yaml
patchTarget:
  kind: deployment
  name: aibrix-gateway-plugins
  namespace: aibrix-system
  type: strategic
spec:
  template:
    spec:
      containers:
        - name: gateway-plugin
          env:
            - name: ROUTING_ALGORITHM
              $patch: delete
